# lcs

./: .editorconfig  AUTHORS  LICENSE  Pipfile  README.rst  pyproject.toml  setup.cfg
.github/workflows/: allow-fail.yml  expected-fail.yml  tests.yml
docs/: conf.py  index.rst
src/lcs/: __init__.py  __main__.py  main.py
src/lcs/cli/: api.py  cmd.py
src/lcs/web/: __init__.py  api.py
src/lcs/web/html/: index.html
src/lcs_api/: __init__.py  __main__.py  cli.py  exceptions.py
tests/: __init__.py  conftest.py  test_api.py  test_lcs.py  test_lcs_api.py
