# For setuptools configuration see https://setuptools.readthedocs.io.
[metadata]
name = LCS
author = Carlos Meza
author-email = carlos@digitalr00ts.com
description  = Longest Common Substring
description-content-type = text/plain
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/cmeza99/lcs
project_urls =
    Bug Tracker = https://github.com/cmeza99/lcs/issues
    Source Code = https://github.com/cmeza99/lcs
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
keywords =
    digitalr00ts

[options]
include_package_data = True
install_requires =
    dataclasses; python_version <"3.7"
    importlib_metadata; python_version <"3.8"
    fastapi >= 0.61
    aiofiles >= 0.5.0
    graphene >2.1,<3
packages = find:
package_dir =
    = src
requires-python = >=3.6
setup_requires =
    setuptools_scm[toml] >=3.4
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    lcs = lcs.cli.cmd:main
    lcs-api = lcs.cli.api:main

[options.extras_require]
docs =
    recommonmark
    rstcheck
    sphinx
    sphinx-autoapi
    sphinx-rtd-theme
    sphinxcontrib-mermaid
lint =
    wemake-python-styleguide
    flakehell
    dlint
    flake8-pytest-style
    pylint
    isort[toml] <5
test =
    pytest[toml] >=6.0.1,<7
    coverage[toml]
    pytest-cov
    ; pytest-xdist >=1.34.0,<2
